# ConfigCraft.ai

./: Docker doccumentation for Configcraft.ai  Dockerfile  LICENSE  README.md  UI_ConfigCraft.py  main.py  pyproject.toml
configcraft/: __init__.py
configcraft/generator/: __init__.py
configcraft/model/: __init__.py
configcraft/ui/: __init__.py
experimental/: rag_iptables.ipynb  rag_soot.ipynb  rag_soot1.ipynb  rag_soot2.ipynb
experimental/soot-examples/: pom.xml
experimental/soot-examples/src/main/java/com/stevens/: App.java  CFGPrinter.java  SootDriver.java  Verifier1.java
experimental/soot-examples/src/main/java/com/stevens/test/: Test.java
experimental/soot-examples/src/test/java/com/stevens/: AppTest.java
experimental/soot/java/: Solution.java
experimental/soot/sootOutput/: java.util.concurrent.ThreadPoolExecutor$lambda_finalize_0__1.jimple  java.util.concurrent.ThreadPoolExecutor.jimple
tests/: pom.xml
tests/src/test/java/testing/: AppTest.java  Container.java  Testcontainers.java  outputFile.java
