[tool.poetry]
name = "configcraft-ai"
version = "0.1.0"
description = ""
authors = ["Fanyi Zhao <fzhao12@stevens.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "configcraft"}]

[tool.poetry.dependencies]
python = "^3.9"
mistralai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
