[tool.poetry]
name = "configcraft-ai"
version = "0.1.0"
description = ""
authors = ["Fanyi Zhao <fzhao12@stevens.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "configcraft"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
#mistralai = "^0.1.8"
llama-index = "^0.10.29"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.1"
# llama-index-embeddings-mistralai = "^0.1.4"
# llama-index-llms-mistralai = "^0.1.10"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-llama-cpp = "^0.1.3"
llama-index-readers-file = "^0.1.19"
llama-index-vector-stores-faiss = "^0.1.2"
faiss-cpu = "^1.8.0"
streamlit = "^1.33.0"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
